# privacy-filter-br

./: .gitignore  .pre-commit-config.yaml  README.md
br-pii-guardrail/: README.md  pyproject.toml
br-pii-guardrail/src/br_pii_guardrail/: __init__.py  core.py  ner.py  pdf_scanner.py  recognizers.py  scanners.py  spacy_ner.py  tokenizer.py
br-pii-guardrail/tests/: test_merge_spans.py  test_smoke.py
docs/: local_training_setup.md  publishing.md
notebooks/: Privacy_Filter_BR_Finetune.ipynb  Privacy_Filter_BR_v2_Finetune.ipynb  Privacy_Filter_BR_v3_Finetune.ipynb  finetune_v2.py  finetune_v3.py  finetune_v3_local.py
research/: CLAUDE.md  index.md  log.md  overview.md
scripts/: ab_compare_v3_v31.py  audit_category_counts.py  audit_label_distribution.py  audit_round_trip.py  audit_v3_disagreement.py  benchmark_lener_br.py  benchmark_lener_br_overlap.py  benchmark_v3_v31.py  benchmark_v3_v4_cross.py  benchmark_v5_split.py  benchmark_v6_split.py  diagnose_v4_on_v3_holdout.py  diff_v4_vs_v3holdout_spans.py  generate_dataset.py  haiku_batch.py  migrate_v3_labels.py  openai_batch.py  phase1_b2b_benchmark.py  phase1_b2b_fetch.py  publish_hf.sh  publish_hf_v4.sh  publish_hf_v5.sh  publish_pypi.sh  relabel_dataset.py  relabel_v2.py  run_overnight.sh  spot_check_relabel.py
src/: extras.py  fodevs.py  generator.py  haiku.py  labeler.py  pessoa.py  tokenizer.py  variants.py
templates/: artigo_blog.jinja2  artigo_noticia.jinja2  ata_assembleia.jinja2  b3_fato_relevante.jinja2  boleto.jinja2  cadastro_administrador.jinja2  comentario_sistema.jinja2  comprovante_pix.jinja2  (+26 more)
(+55 files in other folders)
